# youtube-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.local.json
agents/: base_agent.py  script_writer.py  theme_selector.py  video_generator.py  youtube_uploader.py
cli/: main.py
config/: settings.py
config/prompts/: script_reviewer.txt  script_writer.txt  theme_selector.txt
content/renkau/: key_messages.md  marketing_strategy.md  quality_criteria.md  script_style.md
content/renkau/long/: channel_strategy.md  config.json  key_messages.md  スライド作成用台本スタイルガイド.md  品質基準.md  撮影用台本スタイルガイド.md
content/renkau/short/: channel_strategy.md  config.json  key_messages.md  marketing_strategy.md  quality_criteria.md  script_style.md
models/: schemas.py
notion/: content_reader.py  reporter.py  storage.py
pipelines/: full_pipeline.py
rag/: index_builder.py  local_loader.py  notion_loader.py  retriever.py
scripts/: setup_long_short_notion.py  update_notion_knowledge.py
slides/: renderer.py  slide_agent.py
storage/: local_storage.py
tests/: test_script_writer.py  test_theme_selector.py
tts/: base_tts.py  elevenlabs_tts.py  openai_tts.py
ui/: content_folder.py  generators.py
video/: editor.py  thumbnail.py
video/templates/: default_template.json
youtube/: searcher.py  uploader.py
